3tier-app/templates/cilium-envoy-9964.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideEnvoyConfig
metadata:
  name: myapp-direct-9964
spec:
  services:
    - name: web
      namespace: web-tier
      ports: [80]
  resources:
    - "@type": type.googleapis.com/envoy.config.listener.v3.Listener
      name: cilium-ingress_http
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: myapp_http
                route_config:
                  name: myapp_route
                  virtual_hosts:
                    - name: myapp_vhost
                      domains: ["myapp.local", "myapp.local:9964"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: "web-tier/web:80"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
