3tier-app/templates/web.yaml
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-config
  namespace: web-tier
data:
  default.conf: |
    server {
        listen 80;

        location / {
            proxy_pass http://backend.web-tier.svc.cluster.local:8000;
            proxy_set_header Host $host;
            proxy_set_header X-Real-IP $remote_addr;
            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
            proxy_set_header X-Forwarded-Proto $scheme;
        }
    }
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web-tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              # The destination inside the container
              mountPath: /etc/nginx/conf.d/default.conf 
              # The specific key from your ConfigMap to mount as a file
              subPath: default.conf
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: web
#   namespace: web-tier
# spec:
#   selector:
#     app: web
#   ports:
#     - port: 80
#   type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: web-tier
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: web # Matches your frontend deployment pods
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 32080
